--- a/app/views/posts/new.html
+++ b/app/views/posts/new.html
@@ -1,5 +1,13 @@
-<%= simple_form_for @post, url: posts_path do |form| %>
-  <%= form.input :image, as: :file %>
-  <%= form.input :caption %>
-  <%= form.button :submit %>
-<% end %>
+<div class="form-wrapper">
+    <%= simple_form_for @post, html: { class: 'form-horizontal', multipart: true } do |f| %>
+    <div class="form-group">
+        <%= f.input :image %>
+    </div>
+    <div class="form-group text-center">
+        <%= f.input :caption %>
+    </div>
+    <div class="form-group text-center">
+        <%= f.button :submit, class: 'btn-success' %>
+    </div>
+    <% end %>
+</div>
