--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
     <div class="post">
       <div class="post-head">
         <div class="name">
-          Ben Walker
+          IvanWu
         </div>
       </div>
       <div class="image center-block">
