--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,8 +12,12 @@
     <p class="caption">
       <%= @post.caption %>
     </p>
-    <div class="text-center">
-      <%=link_to "Cancel", posts_path %>
+    <div class="text-center edit-links">
+      <%= link_to "Delete Post", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post"} %>
+      |
+      <%= link_to "Cancel", posts_path %>
+      |
+      <%= link_to "Edit", edit_post_path %>
     </div>
   </div>
 
