--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -9,9 +9,14 @@
   </div>
 
 <%= render 'form' %>
-
-<div class="text-center edit-links">
-  <%= link_to "Delete Post", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post"} %>
-  |
-  <%= link_to "Cancel", posts_path %>
-</div>
+<% if @post.user_id == current_user.id %>
+    <div class="text-center edit-links">
+      <%= link_to "Delete Post", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post"} %>
+      |
+      <%= link_to "Cancel", posts_path %>
+    </div>
+  <% else %>
+    <div class="text-center edit-links">
+      <%= link_to "Cancel", posts_path %>
+    </div>
+  <% end %>
