--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,8 @@
   <% @posts.each do |post| %>
     <div class="post">
       <div class="post-head">
-        <div class="name">
+        <div class= "thumb-head"></div>
+        <div class="user-name">
           <%= post.user.user_name %>
         </div>
       </div>
