bootstrap from 4.0 to 3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
   <title>Mylove</title>
+  <meta charset="utf-8"/>
+  <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -10,15 +12,12 @@
 
 <%= render 'layouts/navbar' %>
 
-
 <div class="container">
   <% flash.each do |name, msg| %>
     <%= content_tag :div, msg, class: [:alert, alert_for(name)] %>
   <% end %>
   <%= yield %>
 </div>
-
-
 
 </body>
 </html>
