--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -16,11 +16,11 @@
             <%= post.user.user_name %>
           </div>
           <%= post.caption %>
-        </div>
-        <div class = "comments" id="comments_<%= post.id %>">
-          <% if post.comments %>
-            <% render post.comments, post: post %>
-          <% end %>
+          <div class = "comments" id="comments_<%= post.id %>">
+            <% if post.comments %>
+              <%= render post.comments, post: post %>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
 
       <div class= "comment-form col-sm-11">
         <%= form_for [post, post.comments.build], remote: true do |f| %>
-          <%= f.text_field :content, placeholder: 'Add a comment...', class: "comment_content", id: "comment_content#{post.id}" %>
+          <%= f.text_field :content, placeholder: 'Add a comment...', class: "comment_content", id: "comment_content_#{post.id}" %>
         <% end %>
       </div>
     </div>
