--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,28 @@ html {
   height: 100%;
 }
 
+.registration-bg {
+  padding-top: 4em;
+  height: 100%;
+}
+
+.log-in {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  border: none;
+}
+
+.panel {
+  border-radius: 8px;
+}
+
+.panel-heading {
+  h1 {
+    text-align: center;
+  }
+}
+
 body {
   height: 100%;
   background-color: #fafafa;
