--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,8 +6,8 @@
     <%= comment.content %>
   </div>
   <% if comment.user == current_user %>
-    <%= link_to post_comment_path(post, comment), method: :delete, data: {confirm: "Are you sure?"}, remote: true do %>
-      <span class="glyphicon glyphicon-remove delete-comment"></span>
+    <%= link_to post_comment_path(post, comment), method: :delete, data: {confirm: "Are you sure?"}, remote: true, id: "delete-#{comment.id}", class: "delete-comment" do %>
+      <span class="glyphicon glyphicon-remove delete-comment-icon"></span>
     <% end %>
   <% end %>
 </div>
