--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -32,8 +32,8 @@
     </div>
 
     <div class="comment-like-form row">
-      <div class="like-button col-sm-1">
-        <span class="glyphicon glyphicon-heart-empty"></span>
+      <div class="col-sm-1 like-button">
+        <%= link_to '', like_post_path(post.id), remote: true, id: "like_#{post.id}", class: "like glyphicon #{liked_post post}" %>
       </div>
 
       <div class= "comment-form col-sm-11">
