--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,42 +20,6 @@ html {
   height: 100%;
 }
 
-.registration-bg {
-  padding-top: 4em;
-  height: 100%;
-}
-
-.log-in {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  border: none;
-}
-
-.panel {
-  border-radius: 8px;
-}
-
-.panel-heading {
-  h1 {
-    text-align: center;
-  }
-}
-
-.login-bg {
-  padding-top: 4em;
-  height: 100%;
-}
-
-#image-preview {
-  margin: 0 auto;
-}
-
-#post_image {
-  padding: 1em;
-  margin: 0px auto;
-}
-
 body {
   height: 100%;
   background-color: #fafafa;
@@ -170,14 +134,6 @@ body {
 
 }
 
-.comments {
-  .paginator {
-    margin: 0.5em;
-    .more-comments {
-      color: #A5A7AA;
-    }
-  }
-}
 
 .comment_content {
   font-size: 15px;
@@ -199,6 +155,49 @@ body {
   justify-content: center;
 }
 
+/* ## Wrapper and styling for the new, edit & devise views ## */
+
+.edit-links {
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.registration-bg {
+  padding-top: 4em;
+  height: 100%;
+}
+
+.log-in {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  border: none;
+}
+
+.panel {
+  border-radius: 8px;
+}
+
+.panel-heading {
+  h1 {
+    text-align: center;
+  }
+}
+
+.login-bg {
+  padding-top: 4em;
+  height: 100%;
+}
+
+#image-preview {
+  margin: 0 auto;
+}
+
+#post_image {
+  padding: 1em;
+  margin: 0px auto;
+}
+
 
 .form-wrapper {
   width: 60%;
@@ -209,10 +208,6 @@ body {
   border-radius: 3px;
 }
 
-.edit-links {
-  margin-top: 20px;
-  margin-bottom: 40px;
-}
 
 #paginator {
   color: #4090DB;
@@ -240,9 +235,16 @@ body {
   }
 }
 
-#user_avatar {
-  margin: 20px auto;
+
+.comments {
+  .paginator {
+    margin: 0.5em;
+    .more-comments {
+      color: #A5A7AA;
+    }
+  }
 }
+
 
 .profile-header {
   padding: 20px 0;
@@ -270,4 +272,17 @@ body {
 
 .profile-bio {
   margin-top: 20px;
+}
+
+#user_bio {
+  border: 1px solid gray;
+}
+
+#user_avatar {
+  margin: 20px auto;
+}
+
+.likes {
+  margin-top: 20px;
+  margin-bottom: 7px;
 }
