--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -11,6 +11,7 @@
       <%= link_to (image_tag post.image.url(:medium), class: 'img-responsive'), post_path(post) %>
     </div>
     <div class = "post-bottom">
+      <%= render 'posts/likes', post: post %>
       <div class= "caption">
         <div class="caption-content">
           <div class= "user-name">
@@ -33,7 +34,7 @@
 
     <div class="comment-like-form row">
       <div class="col-sm-1 like-button">
-        <%= link_to '', like_post_path(post.id), remote: true, id: "like_#{post.id}", class: "like glyphicon #{liked_post post}" %>
+        <%= link_to '', like_post_path(post.id), remote: true, id: "like_#{post.id}", class: "glyphicon glyphicon-heart-empty" %>
       </div>
 
       <div class= "comment-form col-sm-11">
