--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -34,7 +34,7 @@
 
     <div class="comment-like-form row">
       <div class="col-sm-1 like-button">
-        <%= link_to '', like_post_path(post.id), remote: true, id: "like_#{post.id}", class: "glyphicon glyphicon-heart-empty" %>
+        <%= link_to '', like_post_path(post.id), remote: true, id: "like_#{post.id}", class: "like glyphicon #{liked_post post}" %>
       </div>
 
       <div class= "comment-form col-sm-11">
