new comment display fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -245,6 +245,11 @@ body {
   }
 }
 
+.comment-submit-button {
+  position: absolute;
+  left: -9999px;
+}
+
 
 .profile-header {
   padding: 20px 0;
