--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,6 +17,9 @@
             <%= render 'notifications/notification_dropdown' %>
           </li>
           <li>
+            <%= link_to "Browse Posts", browse_posts_path %>
+          </li>
+          <li>
             <%= link_to "New Post", new_post_path %>
           </li>
           <li>
