--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,6 @@
-<%= render 'post_dashboard', posts: @posts %>
+<div id="posts">
+  <%= render 'posts' %>
+</div>
+<div class="text-center" id="paginator">
+  <%= link_to_next_page @posts, 'LOAD MORE', remote: true, id: 'load_more' %>
+</div>
