--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -22,7 +22,7 @@
             <% if post.comments.any? %>
               <%= render post.comments.first(4), post: post %>
               <% unless post.comments.count <= 4 %>
-                <div class="paginator" id="#comments-paginator-<%= post.id %>">
+                <div class="paginator" id="comments-paginator-<%= post.id %>">
                   <%= link_to "view all #{post.comments.count} comments", post_comments_path(post), remote: true, class: 'more-comments', id: "more_comments_#{post.id}", data: {post_id: "#{post.id}", type: "html", value: "#{post.comments.count}"} %>
                 </div>
               <% end %>
